Fix delete session expired token

--- a/auth_service/static/callback.html
+++ b/auth_service/static/callback.html
@@ -6,7 +6,7 @@
     <title>Callback</title>
 </head>
 <body>
-    <h1>Callback</h1>
+    <h1 class="title">Callback</h1>
     <pre id="code"></pre>
     <script>
         const code = new URLSearchParams(window.location.search).get("code");
